--- a/windows/zabbix.mssql.server/discovery.mssql.server.conf
+++ b/windows/zabbix.mssql.server/discovery.mssql.server.conf
@@ -1,6 +1,6 @@
-# Desenvolvido por Diego Cavalcante - 06/12/2017
-# Monitoramento Windows SQLServer
+# Разработан Diego Cavalcante - 06/12/2017
+# Мониторинг Windows SQLServer
 
-UserParameter=discovery.mssql.databases,powershell.exe -noprofile -executionpolicy bypass -File C:\zabbix\monitoramento\scripts\discovery.mssql.server.ps1 JSONDB
-UserParameter=discovery.mssql.jobs,powershell.exe -noprofile -executionpolicy bypass -File C:\zabbix\monitoramento\scripts\discovery.mssql.server.ps1 JSONJOB
-UserParameter=discovery.mssql.dados[*],powershell.exe -noprofile -executionpolicy bypass -File C:\zabbix\monitoramento\scripts\discovery.mssql.server.ps1 $1 "$2"
+UserParameter=discovery.mssql.databases,powershell.exe -noprofile -executionpolicy bypass -File "c:\Program Files\Zabbix Agent\scripts\discovery.mssql.server.ps1" JSONDB
+UserParameter=discovery.mssql.jobs,powershell.exe -noprofile -executionpolicy bypass -File "c:\Program Files\Zabbix Agent\scripts\discovery.mssql.server.ps1" JSONJOB
+UserParameter=discovery.mssql.dados[*],powershell.exe -noprofile -executionpolicy bypass -File "c:\Program Files\Zabbix Agent\scripts\discovery.mssql.server.ps1" $1 "$2"
